bk_ida/gccida/g2/if_then_else_cond
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7648:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v5; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7649:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7666:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v24; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7675:4: error: expected ';' after expression
rtx last_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7675:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7683:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v41; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7685:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v43; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7696:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v54; // [rsp+10h] [rbp-78h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7700:4: error: expected ';' after expression
rtx expa; // [rsp+20h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7700:5: error: use of undeclared identifier 'expa'; did you mean 'exp'?
rtx expa; // [rsp+20h] [rbp-68h] 
    ^~~~
    exp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7699:9: note: 'exp' declared here
__int16 exp; // [rsp+20h] [rbp-68h] 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7703:4: error: expected ';' after expression
rtx true0; // [rsp+30h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7703:5: error: use of undeclared identifier 'true0'
rtx true0; // [rsp+30h] [rbp-58h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7704:4: error: expected ';' after expression
rtx true1; // [rsp+38h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7704:5: error: use of undeclared identifier 'true1'
rtx true1; // [rsp+38h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7705:4: error: expected ';' after expression
rtx false0; // [rsp+40h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7705:5: error: use of undeclared identifier 'false0'; did you mean 'pfalse'?
rtx false0; // [rsp+40h] [rbp-48h] BYREF 
    ^~~~~~
    pfalse
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7646:49: note: 'pfalse' declared here
rtx  if_then_else_cond( rtx x, rtx *ptrue, rtx *pfalse) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7706:4: error: expected ';' after expression
rtx false1; // [rsp+48h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7706:5: error: use of undeclared identifier 'false1'; did you mean 'pfalse'?
rtx false1; // [rsp+48h] [rbp-40h] BYREF 
    ^~~~~~
    pfalse
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7646:49: note: 'pfalse' declared here
rtx  if_then_else_cond( rtx x, rtx *ptrue, rtx *pfalse) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/combine.c:7712:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)x[1]; 
                ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/if_then_else_cond/src/obj/combine.o] Error 1
